# yoga-ui

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  yui-config.cmake.in  yui.mk
.github/workflows/: ci.yml  pages.yml
dev-tools/: micro_bench.cpp  size_check.cpp
docs/: architecture.md  components.md  extending.md  getting-started.md  integration-notes.md  migration-1.0-to-1.1.md  overlays.md  primitives.md  text-editing.md  widgets.md
docs/design/: node-ref-and-absolute-rect.md
examples/: benchmark.cpp  cascading_menu.cpp  context_menu.cpp  hello_world.cpp  nvg_showcase.cpp  pong.cpp  sdl_showcase.cpp  todo_app.cpp
examples/showcase/: App.hpp  Features.hpp  Primitives.hpp  State.hpp  Theme.hpp  showcase.hpp
include/yui/: version.hpp  version.hpp.in  yui.hpp
include/yui/core/: Clipboard.hpp  Component.hpp  ComponentContext.hpp  DirtyScheduler.hpp  EditCommand.hpp  ErrorHandler.hpp  Event.hpp  EventHandler.hpp  Fiber.hpp  Host.hpp  Measure.hpp  Node.hpp  NodeRef.hpp  Props.hpp  Reconciler.hpp  RenderDefaults.hpp  Store.hpp  Utf8.hpp  VNode.hpp
include/yui/detail/: Reconciler.hpp  TransparentStringHash.hpp
include/yui/layout/: Placement.hpp
include/yui/nvg/: NvgRenderer.hpp  nvg.hpp
include/yui/nvg/detail/: NvgScopes.hpp
include/yui/render/: Backend.hpp  StyleResolver.hpp  TextWrap.hpp  TreeRenderer.hpp
include/yui/sdl/: SdlClipboard.hpp  SdlRenderer.hpp  sdl.hpp
include/yui/sdl/detail/: GfxClamp.hpp  SdlScopes.hpp
include/yui/widgets/: Button.hpp  Checkbox.hpp  Modal.hpp  Progress.hpp  Radio.hpp  Select.hpp  Slider.hpp  Switch.hpp  Tabs.hpp  Tooltip.hpp
site/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
site/public/: CNAME
site/src/: content.config.ts
site/src/components/: Footer.astro  Nav.astro
site/src/components/docs/: Pager.astro  Sidebar.astro
site/src/components/landing/: Examples.astro  Features.astro  Hero.astro  Install.astro
site/src/layouts/: Base.astro  Docs.astro
site/src/lib/: docs-nav.ts  rehype-docs-links.mjs  site.ts
site/src/pages/: index.astro
site/src/pages/docs/: [slug].astro
site/src/styles/: theme.css
src/core/: Component.cpp  EventHandler.cpp  Fiber.cpp  Host.cpp  Node.cpp  NodeRef.cpp  Reconciler.cpp  VNode.cpp
src/nvg/: NvgRenderer.cpp
src/render/: Measure.cpp  StyleResolver.cpp  TextWrap.cpp  TreeRenderer.cpp
src/sdl/: SdlRenderer.cpp
test/: TestClipboard.hpp  TestMeasurer.hpp  bench_reconciler.cpp  test_backend_detail.cpp  test_button.cpp  test_checkbox.cpp  test_components.cpp  test_events.cpp  test_layout.cpp  test_list.cpp  test_measure.cpp  test_modal.cpp  test_noderef.cpp  test_placement.cpp  test_portal.cpp  test_progress.cpp  test_radio.cpp  test_reconciler.cpp  test_scheduler.cpp  test_scroll.cpp  test_select.cpp  test_slider.cpp  test_style_resolver.cpp  test_switch.cpp  test_tabs.cpp  test_textwrap.cpp  test_tooltip.cpp  test_tree_renderer.cpp  test_vnode.cpp
